Bug 389741: "ldap_memcache_flush() doesn't clear negative results" r=mcs This patch adds a new LDAP API, ldap_memcache_flush_results(), which works the same as ldap_memcache_flush() except it'll also clear out results from search requests that didn't return any entries.