directory/c-sdk/ldap/libraries/libldap/memcache.c
@@ -62,6 +62,7 @@
 #define MEMCACHE_ACCESS_FLUSH	    7
 #define MEMCACHE_ACCESS_FLUSH_ALL   8
 #define MEMCACHE_ACCESS_FLUSH_LRU   9
+#define MEMCACHE_ACCESS_FLUSH_RESULTS 10
 
 /* Mode constants for function memcache_adj_size */
 #define MEMCACHE_SIZE_DEDUCT	    0
@@ -220,6 +221,8 @@ static int memcache_remove_all(LDAP *ld);
 #endif /* 0 */
 static int memcache_access(LDAPMemCache *cache, int mode, 
 			   void *pData1, void *pData2, void *pData3);
+static void memcache_flush(LDAPMemCache *cache, char *dn, int scope,
+			   int flushresults);
 #ifdef LDAP_DEBUG
 static void memcache_print_list( LDAPMemCache *cache, int index );
 static void memcache_report_statistics( LDAPMemCache *cache );
@@ -486,29 +489,28 @@ ldap_memcache_update( LDAPMemCache *cache )
     LDAP_MEMCACHE_MUTEX_UNLOCK( cache );
 }
 
-/* Removes specified entries from given memcache. */
+/* Removes specified entries from given memcache. Only clears out search
+   results that included search entries. */
 void
 LDAP_CALL
 ldap_memcache_flush( LDAPMemCache *cache, char *dn, int scope )
 {
     LDAPDebug( LDAP_DEBUG_TRACE,
-	    "ldap_memcache_flush( cache: 0x%p, dn: %s, scope: %d)\n",
-	    cache, ( dn == NULL ) ? "(null)" : dn, scope );
+        "ldap_memcache_flush( cache: 0x%p, dn: %s, scope: %d)\n",
+        cache, ( dn == NULL ) ? "(null)" : dn, scope );
+    memcache_flush(cache, dn, scope, 0 /* Don't use result flush mode */);
+}
 
-    if ( !NSLDAPI_VALID_MEMCACHE_POINTER( cache )) {
-	return;
-    }
-
-    LDAP_MEMCACHE_MUTEX_LOCK( cache );
-
-    if (!dn) {
-	memcache_access(cache, MEMCACHE_ACCESS_FLUSH_ALL, NULL, NULL, NULL);
-    } else {
-	memcache_access(cache, MEMCACHE_ACCESS_FLUSH, 
-	                (void*)dn, (void*)scope, NULL);
-    }
-
-    LDAP_MEMCACHE_MUTEX_UNLOCK( cache );
+/* Removes specified entries from given memcache, including search
+   results that returned no entries. */
+void
+LDAP_CALL
+ldap_memcache_flush_results( LDAPMemCache *cache, char *dn, int scope )
+{
+    LDAPDebug( LDAP_DEBUG_TRACE,
+        "ldap_memcache_flush_results( cache: 0x%x, dn: %s, scope: %d)\n",
+        cache, ( dn == NULL ) ? "(null)" : dn, scope );
+    memcache_flush(cache, dn, scope, 1 /* Use result flush mode */);
 }
 
 /* Destroys the given memcache. */
@@ -1585,7 +1587,8 @@ memcache_access(LDAPMemCache *cache, int mode,
 	cache->ldmemc_resTail[LIST_TTL] = NULL;
     }
     /* Remove cached entries in both primary and temporary cache. */
-    else if (mode == MEMCACHE_ACCESS_FLUSH) {
+    else if ((mode == MEMCACHE_ACCESS_FLUSH) ||
+	     (mode == MEMCACHE_ACCESS_FLUSH_RESULTS)) {
 
 	int i, list_id, bDone;
 	int scope = (int)pData2;
@@ -1614,6 +1617,8 @@ memcache_access(LDAPMemCache *cache, int mode,
 	    for (pRes = cache->ldmemc_resHead[list_id]; pRes != NULL; 
 		 pRes = pRes->ldmemcr_next[list_id]) {
 
+		int foundentries = 0;
+
 		if ((memcache_compare_dn(pRes->ldmemcr_basedn, dn, 
 				 LDAP_SCOPE_SUBTREE) != LDAP_COMPARE_TRUE) &&
 		    (memcache_compare_dn(dn, pRes->ldmemcr_basedn, 
@@ -1625,13 +1630,21 @@ memcache_access(LDAPMemCache *cache, int mode,
 
 		    if (!NSLDAPI_IS_SEARCH_ENTRY( pMsg->lm_msgtype ))
 			continue;
-
+		    foundentries = 1;
 		    ber = *(pMsg->lm_ber);
 		    if (ber_scanf(&ber, "{a", &dnTmp) != LBER_ERROR) {
 			bDone = (memcache_compare_dn(dnTmp, dn, scope) == 
 							    LDAP_COMPARE_TRUE);
 			ldap_memfree(dnTmp);
 		    }
+		}
+
+		/* If we're in the result flush mode, and the base matched, and
+		   there were no entries in the result, we'll flush this cache
+		   slot, as opposed to the MEMCACHE_ACCESS_FLUSH mode which does
+		   not flush negative results. */
+		if ((mode == MEMCACHE_ACCESS_FLUSH_RESULTS) && !foundentries) {
+			bDone = 1;
 		}
 
 		if (!bDone)
@@ -1677,6 +1690,30 @@ memcache_access(LDAPMemCache *cache, int mode,
     }
 
     return nRes;
+}
+
+static void
+memcache_flush( LDAPMemCache *cache, char *dn, int scope, int flushresults )
+{
+    if ( !NSLDAPI_VALID_MEMCACHE_POINTER( cache )) {
+	return;
+    }
+
+    LDAP_MEMCACHE_MUTEX_LOCK( cache );
+
+    if (!dn) {
+	memcache_access(cache, MEMCACHE_ACCESS_FLUSH_ALL, NULL, NULL, NULL);
+    } else {
+	if (flushresults) {
+		memcache_access(cache, MEMCACHE_ACCESS_FLUSH_RESULTS,
+			(void*)dn, (void*)scope, NULL);
+	} else {
+		memcache_access(cache, MEMCACHE_ACCESS_FLUSH, 
+	                (void*)dn, (void*)scope, NULL);
+	}
+    }
+
+    LDAP_MEMCACHE_MUTEX_UNLOCK( cache );
 }
 
 
